# gbrs

./: .gitignore  Cargo.toml  README.md
.github/: renovate.json5
.github/workflows/: build.yml  check.yml  clippy.yml  coverage.yml  release.yml  test.yml
gbrs/: Cargo.toml
gbrs/src/: main.rs
libdmg/: Cargo.toml
libdmg/src/: cpu.rs  data.rs  flags.rs  instructions.rs  lib.rs  memory.rs  registers.rs
libdmg/src/instructions/: tests.rs
res/scripts/: SetVersion.ps1
src/: cpu.rs  dmg.rs  main.rs  registers.rs
src/dmg/: cpu.rs  data.rs  instructions.rs  memory.rs  registers.rs
src/dmg/instructions/: tests.rs
