[package]
name = "gbrs"
description = "Game Boy Emulator written in Rust"
version = "0.0.0"
authors = ["Michael Rivnak <rivnakm1@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.2.20"
env_logger = "0.9.0"
libdmg = { path = "../libdmg" }
wgpu = "0.13.1"
winit = "0.27.2"
