[package]
name = "gbrs"
description = "Game Boy Emulator written in Rust"
authors = ["Michael Rivnak <rivnakm1@gmail.com>"]
version = "0.0.0"
edition = "2021"
rust-version = "1.62.1"

[dependencies]
clap = "3.2.20"
env_logger = "0.9.0"
libdmg = { path = "../libdmg" }
wgpu = "0.13.1"
winit = "0.27.2"
