[package]
name = "gbrs"
description = "Game Boy Emulator written in Rust"
authors = ["Michael Rivnak <rivnakm1@gmail.com>"]
version = "0.0.0"
edition = "2021"
rust-version = "1.62.1"

[dependencies]
clap = "3.2.25"
env_logger = "0.10.0"
libdmg = { path = "../libdmg" }
wgpu = "0.15.1"
winit = "0.28.3"
